tweak vertical spacing and fix a missing closing tag

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -683,7 +683,7 @@ label { font-weight: normal; margin-bottom: auto; }
 		margin: .75em 0 1em 0;
 		}
         .card-related-messages {
-            margin: 1em 0;
+            margin: 1em 0 2em 0;
             font-size: 12px;
 
             // override pce message
